# os-events

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: dependencies.cmake  install_dirs.cmake  osevents-config.cmake.in
include/osevents/: event.hpp  session_lock.hpp
include/osevents/details/: dbus.hpp  windows.hpp
src/: CMakeLists.txt  session_lock.cpp
src/details/: dbus.cpp  windows.cpp
tests/: CMakeLists.txt  test.cpp
